# AGroup-DPO

./: .gitignore  .tmp_start_smoke_round6.sh  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.venv-eval/: pyvenv.cfg
configs/: eval.yaml  infer.yaml  smoke_custom_dpo_insurance.yaml  smoke_custom_dpo_insurance_deepspeed_2gpu.yaml  smoke_custom_dpo_insurance_megatron_2gpu.yaml  smoke_custom_sft_insurance.yaml  smoke_custom_sft_insurance_deepspeed_2gpu.yaml  smoke_custom_sft_insurance_megatron_2gpu.yaml  smoke_dpo_insurance.yaml  smoke_lora_qwen2_5_1_5b.yaml  smoke_sft_insurance.yaml  train_dpo_qwen2_5_1_5b_insurance.yaml  train_lora_qwen2_5_1_5b_insurance.yaml
deploy/: Dockerfile.accelerate  Dockerfile.base  Dockerfile.deepspeed  Dockerfile.eval  Dockerfile.fsdp  Dockerfile.infer-vllm  Dockerfile.infer-xinfer  Dockerfile.megatron  README.md  deploy_m_eval_test.sh  deploy_m_infer_test.sh  deploy_m_trainer_dual_gpu_test.sh  deploy_m_trainer_test.sh  deploy_megatron_test.sh  deploy_merge_and_eval.sh  deploy_to_server2.sh  deploy_to_server6.sh  docker-compose.yml  fetch_m01_logs.sh  run_dpo_data_smoke.sh  run_m01_smoke.sh  run_m_eval_test.sh  run_m_infer_test.sh  run_m_trainer_dual_gpu_test.sh  run_m_trainer_test.sh  run_megatron_full_test.sh  run_merge_and_eval.sh  vllm-compose.yml  xinference-compose.yml
docs/: 项目方案.md  项目需求.md
reports/: baseline_comparison.json  baseline_comparison.md  copaw_cli_full_test.md  dpo_data_quality_v1.2.md  eval_report_dpo_v1.json  eval_report_dpo_v1.md  eval_report_server2_alpaca_zh_200.json  eval_report_server2_alpaca_zh_200.md  eval_report_server2_full.json  eval_report_server2_full.md  smoke_m05.json  smoke_m05.md
scripts/: build_eval_datasets.py  check_nccl.py  compare_baseline.py  demo_rag.py  gen_synthetic_data.py  gen_templates_data.py  run_pipeline.py  scrape_insurance_data.py  smoke_eval.py  smoke_m04.py  smoke_m05.py  smoke_m05_rag.py  smoke_vllm.py  (+2 more)
(+142 files in other folders)
